[tool.poetry]
name = "keksik-api"
version = "0.2.4"
description = "Обвертка над API keksik.io"
authors = ["lordralinc <lordralinc@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lordralinc/keksik_api"
repository = "https://github.com/lordralinc/keksik_api"
packages = [{include = "keksik_api"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = ">=1.10,<2.0"
aiohttp = ">=3.8,<4.0"


[tool.poetry.group.dev.dependencies]
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.21.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
